<resources>
    <string name="app_name">FinderAlertButton</string>

    <string name="home">Home</string>
    <string name="settings">Settings</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Location_disabled">Location disabled</string>
    <string name="Location_dialog_message">Do you want enable GPS?</string>

    <!-- Preference Titles -->
    <string name="general_settings">General settings</string>

    <string name="update_time">Update time GPS receiver</string>
    <string name="update_time_summary">My location GPS update time</string>

    <string name="server_update_time">Update time server info</string>
    <string name="server_update_time_summary">Server request update time</string>

    <string name="choose_color">Choose color markers on map</string>

    <string name="update_chat_id">You CHAT ID</string>
    <string name="update_chat_id_summary">Change your chat ID here</string>

    <string name="update_crew_id">My CREW ID</string>
    <string name="update_crew_id_summary">Change your CREW ID here</string>

    <string name="token">TOKEN for bot</string>
    <string name="token_summary">Change your BOT TOKEN here</string>

    <string name="update_id">You CREW ID is</string>


    <string name="update_id_summary">Change your CREW ID here</string>
    <string name="center_of_map">Center of map</string>
    <string name="elapsed_time_00_00_00">Elapsed time 00:00:00</string>
    <string name="main">Main</string>
    <string name="map">Map</string>
    <string name="settings_in_menu">Settings</string>
    <string name="category_1">Category 1</string>
    <string name="main_menu">Main menu</string>


</resources>