<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/general_settings"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:enabled="true"
        app:icon="@drawable/ic_general_settings"
        app:iconSpaceReserved="false"
        app:key="pref_category"
        app:singleLineTitle="true">

        <ListPreference
            android:defaultValue="5000"
            android:entries="@array/loc_time_update_name"
            android:entryValues="@array/loc_time_update_value"
            android:key="update_time_key"
            android:title="@string/update_time"
            app:icon="@drawable/ic_update_time"
            app:summary="@string/update_time_summary" />

        <ListPreference
            android:defaultValue="5000"
            android:entries="@array/server_time_update_name"
            android:entryValues="@array/server_time_update_value"
            android:key="server_update_key"
            android:title="@string/server_update_time"
            app:icon="@drawable/ic_update_time"
            app:summary="@string/server_update_time_summary" />
        <ListPreference
            android:defaultValue="#0636C3"
            android:entries="@array/color_name"
            android:entryValues="@array/color_value"
            android:key="color_key"
            android:title="@string/choose_color"
            app:icon="@drawable/ic_circle" />

        <EditTextPreference
            android:defaultValue=""
            android:key="id_crew_key"
            android:title="@string/update_id"
            app:icon="@drawable/ic_id_user"
            app:summary="@string/update_id_summary" />
        <PreferenceCategory
            android:title="Telegram settings"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:icon="@drawable/telegram__1_">

            <EditTextPreference
                android:defaultValue=""
                android:key="chat_id_key"
                android:title="@string/update_chat_id"
                app:icon="@drawable/ic_chat_id"
                app:summary="@string/update_chat_id_summary" />
            <EditTextPreference
                android:defaultValue=""
                android:key="token_key"
                android:title="@string/token"
                app:icon="@drawable/ic_token"
                app:summary="@string/token_summary" />
        </PreferenceCategory>

    </PreferenceCategory>
</PreferenceScreen>